--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
+  "name": "quiz-db",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "json-server": "^1.0.0-beta.1"
-  },
-  "scripts": {
-    "start": "json-server --watch db.json --port 3000"
   }
-
 }
-
